--- a/front-end/src/containers/GiftCards/components/GiftCard/styles.scss
+++ b/front-end/src/containers/GiftCards/components/GiftCard/styles.scss
@@ -10,6 +10,7 @@
     height: 100%;
     object-fit: cover;
     border-radius: 6px;
+    border: .75px solid $text-light-gray;
   }
 
   .gift-card-info {
@@ -20,8 +21,9 @@
     text-align: right;
     
     .gift-card-price {
-      font-size: 32px;
+      font-size: 24px;
       font-family: 'Montserrat-Bold'; 
+      text-align: center;
 
       input::-webkit-outer-spin-button,
       input::-webkit-inner-spin-button {
@@ -35,8 +37,8 @@
       }
     }
     .gift-card-title {
-      font-size: 16px;
-      font-family: 'Montserrat-SemiBold';
+      font-size: $mobile-regular-font-size - 2;
+      font-family: 'Montserrat-Bold';
     }
   }
 
