[FE] revamp pricing page

--- a/front-end/src/containers/HowItWorks/components/CommonQuestions/styles.scss
+++ b/front-end/src/containers/HowItWorks/components/CommonQuestions/styles.scss
@@ -27,7 +27,9 @@
 
     .div-question-answer {
       margin-top: 20px;
-      font-size: $mobile-regular-font-size;
+      font-size: $mobile-regular-font-size + 1;
+      font-family: 'OpenSans-Regular';
+      line-height: 20px;
 
       a {
         text-decoration: underline;
