--- a/front-end/src/containers/HowItWorks/components/MealPlan/styles.scss
+++ b/front-end/src/containers/HowItWorks/components/MealPlan/styles.scss
@@ -9,7 +9,7 @@
   flex-direction: column;
 
   .div-meal-plan-title {
-    font-size: 16px;
+    font-size: $small-font-size;
     font-family: 'Montserrat-Bold';
     text-align: center;
     margin-top: 20px;
@@ -19,56 +19,70 @@
     display: flex;
     justify-content: center;
     margin-top: 10px;
-
-    .span-subtitle1 {
-      font-size: 7px;
-      color: #9D9D9D;
-      margin-right: 5px;
-      margin-top: 2px;
-    }
-
-    .span-subtitle2 {
-      font-size: $mobile-regular-font-size - 1;
+    
+    .span-subtitle {
+      font-size: $mobile-regular-font-size + 1;
+      font-family: 'Montserrat-Medium';
       color: $text-light-gray;
     }
   }
 
   .div-meal-plan-image {
-    margin-top: 20px;
+    margin-top: 15px;
     img {
       width: 100%;
     }
   }
 
-  .div-meal-plan-start-price {
-    color: $text-light-gray;
-    font-size: $mobile-regular-font-size;
-    text-align: center;
-    margin-top: 30px;
+  .div-meal-plan-prices {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 42px;
+    width: calc(100% - 96px);
+    margin: 30px auto;
 
-    span {
-      font-family: 'Montserrat-Bold';
-      font-size: $small-font-size - 1;
+    .div-meal-plan-price {
+      width: 33%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      .span-price-title {
+        font-size: $mobile-small-font-size + 2;
+        color: #B2B4BC;
+        margin-top: 5px;
+      }
+
+      .span-price-value {
+        font-size: $small-font-size - 1;
+        color: $text-light-gray;
+        font-family: 'Montserrat-Medium';
+      }
     }
-  }
 
-  .div-meal-plan-total-price {
-    color: $text-light-gray;
-    font-size: $mobile-regular-font-size + 2;
-    text-align: center;
-    margin-top: 20px;
+    .has-separator {
+      border-left: 1px solid $text-light-gray;
+      border-right: 1px solid $text-light-gray;
+    }
   }
 
   .btn-grab-offer {
     width: calc(100% - 96px);
     height: 46px;
-    margin: 24px 43px 43px;
+    margin: 0 auto 30px;
     font-size: $mobile-regular-font-size - 1;
     font-family: 'Montserrat-Medium';
     border-radius: 4px;
+    border: .75px solid #3E8541;
   }
 
   @media (max-width: 710px) {
+    .div-meal-plan-prices {
+      width: calc(100% - 20px);
+      margin: 15px auto;
+    }
+
     .btn-grab-offer {
       font-size: $mobile-small-font-size;
       width: calc(100% - 20px);
