--- a/front-end/src/containers/Authentication/Signup/styles.scss
+++ b/front-end/src/containers/Authentication/Signup/styles.scss
@@ -38,6 +38,7 @@
       .auth-form {
         padding-left: 40px;
         padding-right: 40px;
+        padding-top: 20px;
       }
 
       .img-background {
