[FE]  header / footer centered content.

--- a/front-end/src/containers/Home/components/Feedback/styles.scss
+++ b/front-end/src/containers/Home/components/Feedback/styles.scss
@@ -61,7 +61,7 @@
 
     .div-feedback-content {
       color: $text-light-gray;
-      font-size: $mobile-regular-font-size + 1;
+      font-size: $mobile-regular-font-size;
       font-family: 'OpenSans-Regular';
       overflow: hidden;
       text-align: left;
