--- a/front-end/src/containers/Root/components/Footer/components/FooterTopSectionButton/styles.scss
+++ b/front-end/src/containers/Root/components/Footer/components/FooterTopSectionButton/styles.scss
@@ -25,6 +25,10 @@
     }
   }
 
+  .no-left-margin {
+    margin-left: unset;
+  }
+
   .div-footer-top-section-button-separator {
     color: white;
     font-size: $small-font-size;
