--- a/front-end/src/containers/Menus/components/MenusHeader/styles.scss
+++ b/front-end/src/containers/Menus/components/MenusHeader/styles.scss
@@ -4,120 +4,126 @@
   position: fixed;
   left: 0;
   right: 0;
-  height: 70px;
   z-index: $zindex-menu-header;
   background-color: $extra-light-green;
   border-bottom: 1px solid #70707080;
   transition: all ease-out 0.1s;
 
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-
-  padding: 0 100px;
-
-  .div-menus-header-left {
-    flex-grow: 3;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-
-    .menu-datepicker {
-      margin-left: 80px;
-      .dropdown__content  {
-        left: 240px;
-        margin-top: 5px;
-      }
-    }
-  }
-
-  .div-menus-header-right {
-    display: flex;
-    align-items: center;
-
-    .div-search-container {
-      margin-left: 35px;
-      width: 325px;
-      height: 40px;
-      padding: 0 30px 0 15px;
-      display: flex;
-      align-items: center;
-      background: white;
-      border-radius: 4px;
-      border: 1px solid #54595480;
-
-      input {
-        width: 100%;
-        flex-grow: 1;
-        font-size: $mobile-regular-font-size - 1.5;
-        color: #545954;
-        caret-color: $green-primary;
-      }
-
-      img {
-        height: 17px;
-      }
-    }
-
-    .div-zip-code {
-      display: flex;
-      align-items: center;
-      margin-right: 35px;
-
-      .span-title {
-        font-family: 'CeraPro-Medium';
-        font-size: $mobile-regular-font-size;
-        color: #787878;
-        margin-right: 5px;
-      }
-    }
-  }
-
-  @media (max-width: 1200px) {
-    .div-menus-header-left .menu-datepicker {
-      display: none;
-    }
-    .div-menus-header-right {
-      .div-search-container {
-        margin-left: 0;
-        width: 250px;
-      }
-    }
-  }
-
-  @media (max-width: 900px) {
-    .div-menus-header-right {
-      .div-zip-code {
-        display: none;
-      }
-    }
-  }
-
   @media (max-width: 710px) {
     position: absolute;
     padding: 0 22px;
-    height: 63px;
-
-    .div-menus-header-right .div-search-container {
-      width: 200px;
-      height: 31px;
-      border-radius: 4px;
-      padding: 10px;
-
-      img {
-        height: 13px;
-      }
-      input {
-        font-size: $mobile-regular-font-size;
-      }
-    }
   }
 
-  @media (max-width: 414px) {
+  .container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    height: 70px;
+    max-width: 1400px;
+    padding: 0 20px;
 
+    .div-menus-header-left {
+      flex-grow: 3;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+  
+      .menu-datepicker {
+        margin-left: 80px;
+        .dropdown__content  {
+          left: 240px;
+          margin-top: 5px;
+        }
+      }
+    }
+  
     .div-menus-header-right {
+      display: flex;
+      align-items: center;
+  
       .div-search-container {
-        width: 150px;
+        margin-left: 35px;
+        width: 325px;
+        height: 40px;
+        padding: 0 30px 0 15px;
+        display: flex;
+        align-items: center;
+        background: white;
+        border-radius: 4px;
+        border: 1px solid #54595480;
+  
+        input {
+          width: 100%;
+          flex-grow: 1;
+          font-size: $mobile-regular-font-size - 1.5;
+          color: #545954;
+          caret-color: $green-primary;
+        }
+  
+        img {
+          height: 17px;
+        }
+      }
+  
+      .div-zip-code {
+        display: flex;
+        align-items: center;
+        margin-right: 35px;
+  
+        .span-title {
+          font-family: 'CeraPro-Medium';
+          font-size: $mobile-regular-font-size;
+          color: #787878;
+          margin-right: 5px;
+        }
+      }
+    }
+  
+    @media (max-width: 1200px) {
+      .div-menus-header-left .menu-datepicker {
+        display: none;
+      }
+      .div-menus-header-right {
+        .div-search-container {
+          margin-left: 0;
+          width: 250px;
+        }
+      }
+    }
+  
+    @media (max-width: 900px) {
+      .div-menus-header-right {
+        .div-zip-code {
+          display: none;
+        }
+      }
+    }
+  
+    @media (max-width: 710px) {
+      max-width: 100% !important;
+      height: 63px;
+      padding: unset;
+
+      .div-menus-header-right .div-search-container {
+        width: 200px;
+        height: 31px;
+        border-radius: 4px;
+        padding: 10px;
+  
+        img {
+          height: 13px;
+        }
+        input {
+          font-size: $mobile-regular-font-size;
+        }
+      }
+    }
+  
+    @media (max-width: 414px) {
+      .div-menus-header-right {
+        .div-search-container {
+          width: 150px;
+        }
       }
     }
   }
