--- a/front-end/src/containers/HowItWorks/components/CommonQuestions/styles.scss
+++ b/front-end/src/containers/HowItWorks/components/CommonQuestions/styles.scss
@@ -9,6 +9,7 @@
     font-size: 31px;
     font-family: 'Montserrat-Bold';
     text-align: center;
+    margin-bottom: 120px;
   }
 
   .div-common-questions {
@@ -21,15 +22,17 @@
     }
 
     .div-question-title {
-      font-family: 'Montserrat-Medium';
-      margin-top: 50px;
+      font-family: 'Montserrat-SemiBold';
+      margin-top: 35px;
+      margin-left: 20px;
     }
 
     .div-question-answer {
-      margin-top: 20px;
+      margin-top: 10px;
       font-size: $mobile-regular-font-size + 1;
       font-family: 'OpenSans-Regular';
       line-height: 20px;
+      color: #6B6B6B;
 
       a {
         text-decoration: underline;
@@ -38,7 +41,7 @@
   }
 
   .div-check-faq-container {
-    margin: 80px 25px;
+    margin: 70px 25px;
     text-align: center;
 
     .div-check-faq {
@@ -47,8 +50,8 @@
       border-radius: 7px;
       border: 1px solid #DCDCDE;
       text-align: center;
-      padding: 25px 33px;
-      font-size: $small-font-size - 1;
+      padding: 20px 20px;
+      font-size: $mobile-regular-font-size;
 
       a {
         color: $green-secondary;
