--- a/front-end/src/styles/_fonts.scss
+++ b/front-end/src/styles/_fonts.scss
@@ -90,6 +90,11 @@
 }
 
 @font-face {
+  font-family: 'Brandon-Bold';
+  src: url('../assets/fonts/Brandon/Brandon_bld.otf') format('opentype');
+}
+
+@font-face {
   font-family: 'CeraPro-Medium';
   src: url('../assets/fonts/Cera/Cera Pro Medium.otf') format('opentype');
 }
