--- a/front-end/src/containers/Modals/ShareExperienceModal/styles.scss
+++ b/front-end/src/containers/Modals/ShareExperienceModal/styles.scss
@@ -40,6 +40,7 @@
     font-size: $small-font-size;
     font-family: 'Montserrat-SemiBold';
     color: $text-light-gray;
+    text-transform: uppercase;
   }
 
   .order-feedback-header-section {
