--- a/front-end/src/containers/Modals/OrderFeedbackModal/styles.scss
+++ b/front-end/src/containers/Modals/OrderFeedbackModal/styles.scss
@@ -81,6 +81,7 @@
       font-size: $small-font-size;
       font-family: 'Montserrat-SemiBold';
       color: $text-light-gray;
+      text-transform: uppercase;
     }
   }
 }
