--- a/front-end/src/containers/SideCart/styles.scss
+++ b/front-end/src/containers/SideCart/styles.scss
@@ -60,11 +60,26 @@
     }
   }
 
-  .div-side-cart-items {
+  .div-side-cart-items-container{
     flex-grow: 1;
-    overflow-y: scroll;
-    padding: 0 20px;
+    overflow: hidden;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    margin-left: -17px;
+
+    .div-side-cart-items {
+      display: flex;
+      flex-direction: column;
+      flex-grow: 1;
+      overflow-y: scroll;
+      padding: 0 20px;
+      align-items: stretch;
+      position: relative;
+      right: -17px;
+    }
   }
+  
 
   @media (max-width: 414px) {
     .div-side-cart-header {
