[FE] confirmation page -> bold the name not uppercase

--- a/front-end/src/containers/OrderConfirmation/styles.scss
+++ b/front-end/src/containers/OrderConfirmation/styles.scss
@@ -76,7 +76,7 @@
             line-height: 20px;
 
             &.name{
-              text-transform: uppercase;
+              font-family: 'OpenSans-Bold';
             }
           }
 
