--- a/front-end/src/containers/Root/components/Header/components/SettingsDropdown/styles.scss
+++ b/front-end/src/containers/Root/components/Header/components/SettingsDropdown/styles.scss
@@ -7,6 +7,10 @@
       display: flex;
       align-items: center;
 
+      &.mobile{
+        display: none;
+      }
+
       img {
         height: 20px;
       }
@@ -32,7 +36,6 @@
     border-radius: 15px;
     box-shadow: 2px 2px 6px rgba(0,0,0,0.16);
     width: 240px;
-    height: 170px;
     margin-left: -150px;
     margin-top: 12px;
     padding-top: 10px;
@@ -40,6 +43,10 @@
     animation-duration: 0.5s;
     transform-origin: left top;
     overflow: hidden;
+
+    .mobile{
+      display: none;
+    }
 
     .div-menu {
       color: $text-light-gray;
@@ -64,7 +71,25 @@
 
   @media (max-width: 710px) {
     .dropdown__content {
-      margin-left: -150px;
+      margin-left: -20px;
+
+      .mobile{
+        display: block;
+      }
+      .desktop{
+        display: none;
+      }
+    }
+
+    .dropdown__trigger {
+      .settings-dropdown-trigger {
+        &.mobile{
+          display: block;
+        }
+        &.desktop{
+          display: none;
+        }
+      }
     }
   }
 
