--- a/front-end/src/containers/Root/components/DropdownFooter/styles.scss
+++ b/front-end/src/containers/Root/components/DropdownFooter/styles.scss
@@ -2,13 +2,13 @@
 
 .responsive-app-footer {
   .img-logo {
-    width: 110px;
-    margin: 30px 0 0px 30px;
+    height: 23.5px;
+    margin: 35px 0 10px 30px;
   }
 
   .div-footer-dropdown-container {
-    width: calc(100% - 50px);
-    margin: 25px;
+    width: calc(100% - 40px);
+    margin: 20px;
     box-shadow: 0px 0px 31px rgba(0,0,0,0.16);
     background-color: #333333;
 
